--- a/composer.json
+++ b/composer.json
@@ -5,14 +5,23 @@
   "type": "wordpress-plugin",
   "license": "GPL-2.0+",
   "require-dev": {
-    "wp-coding-standards/wpcs": "0.13.1"
+    "wp-coding-standards/wpcs": "0.13.1",
+    "woocommerce/woocommerce-git-hooks": "1.0.2"
   },
   "scripts": {
+    "pre-update-cmd": [
+      "WooCommerce\\GitHooks\\Hooks::preHooks"
+    ],
+    "pre-install-cmd": [
+      "WooCommerce\\GitHooks\\Hooks::preHooks"
+    ],
     "post-install-cmd": [
-      "\"vendor/bin/phpcs\" --config-set installed_paths vendor/wp-coding-standards/wpcs"
+      "\"vendor/bin/phpcs\" --config-set installed_paths vendor/wp-coding-standards/wpcs",
+      "WooCommerce\\GitHooks\\Hooks::postHooks"
     ],
     "post-update-cmd": [
-      "\"vendor/bin/phpcs\" --config-set installed_paths vendor/wp-coding-standards/wpcs"
+      "\"vendor/bin/phpcs\" --config-set installed_paths vendor/wp-coding-standards/wpcs",
+      "WooCommerce\\GitHooks\\Hooks::postHooks"
     ]
   }
 }
