Add phpunit as a composer dev dependency

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
   "license": "GPL-2.0+",
   "require-dev": {
     "wp-coding-standards/wpcs": "0.14.1",
-    "woocommerce/woocommerce-git-hooks": "1.0.5"
+    "woocommerce/woocommerce-git-hooks": "1.0.5",
+    "phpunit/phpunit": "^6.5"
   },
   "scripts": {
     "pre-update-cmd": [
